--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "parcel index.html",
     "test": "jest",
-    "watch-test": "jest --watch"
+    "watch-test": "jest --watch",
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,6 @@
     "@babel/preset-react": "^7.23.3",
     "@testing-library/react": "^14.1.2",
     "jest-environment-jsdom": "^29.7.0",
-    "parcel": "^2.10.3",
     "postcss": "^8.4.31",
     "process": "^0.11.10",
     "tailwindcss": "^3.3.5"
