--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.23.3",
     "@testing-library/react": "^14.1.2",
     "jest-environment-jsdom": "^29.7.0",
+    "parcel": "^2.11.0",
     "postcss": "^8.4.31",
     "process": "^0.11.10",
     "tailwindcss": "^3.3.5"
